improved id3v2 and cscoredemo

--- a/Samples/CSCoreDemo/MainWindow.xaml
+++ b/Samples/CSCoreDemo/MainWindow.xaml
@@ -62,6 +62,8 @@
                 <TextBlock Text="{Binding LeadPerformers, StringFormat='Lead performers: \{0\}', TargetNullValue=&lt;no value&gt;}"/>
                 <TextBlock Text="{Binding Year, StringFormat='Year: \{0\}', TargetNullValue=&lt;no value&gt;}"/>
                 <TextBlock Text="{Binding Genre, StringFormat='Genre: \{0\}', TargetNullValue=&lt;no value&gt;}"/>
+                <TextBlock Text="{Binding TrackNumber, StringFormat='TrackNumber: \{0\}', TargetNullValue=&lt;no value&gt;}"/>
+                <TextBlock Text="{Binding Comments, StringFormat='Comments: \{0\}', TargetNullValue=&lt;no value&gt;}"/>
                 <Image Source="{Binding Image}" Width="150" Height="150"/>
             </StackPanel>
             </Border>
