ID3 PictureFrame Bugfix for ID3v2.2.0

--- a/Samples/CSCoreDemo/MainWindow.xaml
+++ b/Samples/CSCoreDemo/MainWindow.xaml
@@ -90,7 +90,7 @@
             <GridSplitter ResizeDirection="Columns" Width="3" />
             <UniformGrid Grid.Column="1" Rows="2">
                 <cscore:WaveForm DataProvider="{Binding VisualizationViewModel.SampleDataProvider, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" EnableRendering="True"/>
-                <cscore:Point3DSpectrum DataProvider="{Binding VisualizationViewModel.FFTDataProvider, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" />
+                <cscore:Point3DSpectrum DataProvider="{Binding VisualizationViewModel.FFTDataProvider, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" EnableRendering="True"/>
             </UniformGrid>
         </Grid>
     </DockPanel>
