--- a/Samples/CSCoreDemo/MainWindow.xaml
+++ b/Samples/CSCoreDemo/MainWindow.xaml
@@ -88,9 +88,9 @@
                 <Image Source="{Binding Image}" Width="150" Height="150" HorizontalAlignment="Left" Margin="5" />
             </StackPanel>
             <GridSplitter ResizeDirection="Columns" Width="3" />
-            <UniformGrid Grid.Column="1" Rows="2">
+            <UniformGrid Grid.Column="1" Rows="1">
                 <cscore:WaveForm DataProvider="{Binding VisualizationViewModel.SampleDataProvider, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" EnableRendering="True"/>
-                <cscore:Point3DSpectrum DataProvider="{Binding VisualizationViewModel.FFTDataProvider, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" EnableRendering="True"/>
+                <cscore:Point3DSpectrum DataProvider="{Binding VisualizationViewModel.FFTDataProvider, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" EnableRendering="False" Visibility="Collapsed"/>
             </UniformGrid>
         </Grid>
     </DockPanel>
