--- a/CSCore/AudioSubTypes.tt
+++ b/CSCore/AudioSubTypes.tt
@@ -8,7 +8,7 @@ using System;
 namespace CSCore
 {
 	/// <summary>
-    /// Contains defined MediaTypes and provides methods to convert between AudioEncoding and MediaType.
+    /// Defines MediaTypes and provides methods to convert between AudioEncoding and MediaType.
     /// </summary>
 	public static class AudioSubTypes
 	{
@@ -17,25 +17,25 @@ namespace CSCore
         /// Converts a Mediatype-value to a AudioEncoding-value.
         /// </summary>
         /// <param name="mediaType"></param>
-        /// <returns></returns>
+        /// <returns>The <see cref="AudioEncoding"/> which equals to the specified</returns>
         public static AudioEncoding EncodingFromMediaType(Guid mediaType)
         {
             var bytes = mediaType.ToByteArray();
             int value = BitConverter.ToInt32(bytes, 0);
-            if (Enum.IsDefined(typeof(AudioEncoding), (ushort)value))
+            if (Enum.IsDefined(typeof(AudioEncoding), (short)value))
                 return (AudioEncoding)value;
 
             throw new ArgumentException("Invalid mediaType.");
         }
 
         /// <summary>
-        /// Converts a AudioEncoding-value to a Mediatype-value.
+        /// Converts a <see cref="AudioEncoding"/> value to a Mediatype value.
         /// </summary>
-        /// <param name="encoding"></param>
-        /// <returns></returns>
+        /// <param name="audioEncoding">The <see cref="AudioEncoding"/> to convert to the mediatype value.</param>
+        /// <returns>The mediatype which belongs to the specified <paramref name="audioEncoding"/>.</returns>
         public static Guid MediaTypeFromEncoding(AudioEncoding encoding)
         {
-            if(Enum.IsDefined(typeof(AudioEncoding), (ushort)encoding))
+            if(Enum.IsDefined(typeof(AudioEncoding), (short)encoding))
                 return new Guid((int)encoding, 0x0000, 0x0010, 0x80, 0x00, 0x00, 0xaa, 0x00, 0x38, 0x9b, 0x71);
 
             throw new ArgumentException("Invalid encoding.");
