--- a/SoundTouchPitchAndTempo/MainWindow.xaml
+++ b/SoundTouchPitchAndTempo/MainWindow.xaml
@@ -3,11 +3,11 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:SoundTouchPitchAndTempo"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
-    Width="222"
-    Height="450"
+    Title="SoundTouch Example"
+    Width="225"
+    Height="375"
+    ResizeMode="NoResize"
     mc:Ignorable="d">
     <Grid
         Width="Auto"
@@ -22,17 +22,23 @@
         <Button
             Grid.Row="0"
             Width="75"
+            Height="25"
+            Margin="5"
             HorizontalAlignment="Left"
             Command="{Binding OpenCommand}"
             Content="Open" />
         <Button
             Grid.Row="0"
             Width="75"
+            Height="25"
+            Margin="5"
             Command="{Binding PlayCommand}"
             Content="Play" />
         <Button
             Grid.Row="0"
             Width="75"
+            Height="25"
+            Margin="5"
             HorizontalAlignment="Right"
             Command="{Binding StopCommand}"
             Content="Stop" />
@@ -66,8 +72,8 @@
                 <Button
                     x:Name="PitchDownButton"
                     Grid.Column="0"
-                    Width="25"
-                    Height="25"
+                    Width="30"
+                    Height="30"
                     Margin="0,0,5,0"
                     HorizontalAlignment="Right"
                     Command="{Binding PitchDownCommand}"
@@ -75,15 +81,15 @@
                 <Button
                     x:Name="PitchCenterButton"
                     Grid.Column="1"
-                    Width="25"
-                    Height="25"
+                    Width="30"
+                    Height="30"
                     Command="{Binding PitchCenterCommand}"
                     Content="0" />
                 <Button
                     x:Name="PitchUpButton"
                     Grid.Column="2"
-                    Width="25"
-                    Height="25"
+                    Width="30"
+                    Height="30"
                     Margin="5,0,0,0"
                     HorizontalAlignment="Left"
                     Command="{Binding PitchUpCommand}"
@@ -151,8 +157,8 @@
                     <Button
                         x:Name="TempoUpButton"
                         Grid.Row="0"
-                        Width="25"
-                        Height="25"
+                        Width="30"
+                        Height="30"
                         Margin="0,10,10,0"
                         VerticalAlignment="Top"
                         Command="{Binding TempoUpCommand}"
@@ -160,16 +166,16 @@
                     <Button
                         x:Name="TempoCenterButton"
                         Grid.Row="1"
-                        Width="25"
-                        Height="25"
+                        Width="30"
+                        Height="30"
                         Margin="0,0,10,0"
                         Command="{Binding TempoCenterCommand}"
                         Content="0" />
                     <Button
                         x:Name="TempoDownButton"
                         Grid.Row="2"
-                        Width="25"
-                        Height="25"
+                        Width="30"
+                        Height="30"
                         Margin="0,10,10,10"
                         VerticalAlignment="Bottom"
                         Command="{Binding TempoDownCommand}"
