Added the ability to close while playing to cleanup resources and actually close.

--- a/Samples/SoundTouchPitchAndTempo/MainWindow.xaml
+++ b/Samples/SoundTouchPitchAndTempo/MainWindow.xaml
@@ -7,6 +7,7 @@
     Title="SoundTouch Example"
     Width="225"
     Height="375"
+    Closing="WindowClosing"
     ResizeMode="NoResize"
     mc:Ignorable="d">
     <Grid
